# agiloop-cli

./: BUGS.md  BUG_REPORT.md  CHANGELOG.md  Cargo.toml  PRD.md  README.md
.github/workflows/: ci.yml  release.yml
crates/scheduler-cli/: Cargo.toml
crates/scheduler-cli/src/: main.rs
crates/scheduler-cli/tests/: cli_smoke.rs
crates/scheduler-core/: Cargo.toml
crates/scheduler-core/src/: branch.rs  error.rs  job.rs  lib.rs  run.rs  schedule.rs  validation.rs
crates/scheduler-daemon/: Cargo.toml
crates/scheduler-daemon/src/: lib.rs
crates/scheduler-git/: Cargo.toml
crates/scheduler-git/src/: lib.rs
crates/scheduler-logs/: Cargo.toml
crates/scheduler-logs/src/: lib.rs
crates/scheduler-provider/: Cargo.toml
crates/scheduler-provider/src/: lib.rs
crates/scheduler-store/: Cargo.toml
crates/scheduler-store/src/: lib.rs
crates/scheduler-testkit/: Cargo.toml
crates/scheduler-testkit/src/: lib.rs
crates/scheduler-tui/: Cargo.toml
crates/scheduler-tui/src/: dashboard.rs  lib.rs
docs/: blocker-remediation.md  current-bugs.md  implementation-status.md  job-spec-reference.md  provider-guide.md  release.md  troubleshooting.md
fixtures/jobs/: manual-shell.json
scripts/: install.sh
