[workspace]
members = [
  "crates/scheduler-cli",
  "crates/scheduler-core",
  "crates/scheduler-daemon",
  "crates/scheduler-git",
  "crates/scheduler-logs",
  "crates/scheduler-provider",
  "crates/scheduler-store",
  "crates/scheduler-testkit",
  "crates/scheduler-tui",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/scheduler-cli"
rust-version = "1.90"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
cron = "0.15"
crossterm = "0.28"
directories = "6"
regex = "1"
ratatui = "0.29"
rusqlite = { version = "0.37", features = ["bundled", "chrono", "serde_json", "uuid"] }
schemars = { version = "0.8", features = ["chrono", "uuid1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slug = "0.1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "signal", "time"] }
toml = "0.9"
ureq = { version = "2", features = ["json"] }
uuid = { version = "1", features = ["serde", "v4", "v7"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
