[package]
name = "scheduler-core"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
chrono-tz.workspace = true
cron.workspace = true
regex.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
slug.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
toml.workspace = true
