[package]
name = "scheduler-store"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chrono.workspace = true
rusqlite.workspace = true
scheduler-core = { path = "../scheduler-core" }
scheduler-provider = { path = "../scheduler-provider" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
